--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -50,3 +50,9 @@ $theme-colors: (
 .site-logo {
   text-align: center;
 }
+span.logo-text {
+  font-family: Quicksand, sans-serif;
+}
+section#audience-section {
+  background-color: $theme-bg-light;
+}
